[gd_scene load_steps=5 format=3 uid="uid://dm0epwcnjr1c3"]

[ext_resource type="Script" path="res://Scenes/UIs/Menus/Main_Menu/main_menu.gd" id="1_16siy"]
[ext_resource type="FontFile" uid="uid://1smp3j53cv0l" path="res://Assets/Fonts/Typodermic Fonts/vinque rg.otf" id="2_bec30"]
[ext_resource type="Texture2D" uid="uid://bkvc7m8ckxk3p" path="res://Assets/Sprites/background.png" id="2_byyrk"]
[ext_resource type="Theme" uid="uid://c3u7pkv4gva6m" path="res://Scenes/UIs/UI_Settings/PurpleMana.tres" id="3_duxap"]

[node name="Main_Menu" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -576.0
offset_top = -324.0
offset_right = -576.0
offset_bottom = -324.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 6
size_flags_vertical = 6
script = ExtResource("1_16siy")
metadata/_edit_horizontal_guides_ = []
metadata/_edit_vertical_guides_ = [95.0]
metadata/_edit_use_anchors_ = true

[node name="TextureRect" type="TextureRect" parent="."]
modulate = Color(0.698039, 0.313726, 0.45098, 1)
show_behind_parent = true
texture_filter = 1
layout_mode = 0
offset_right = 1145.0
offset_bottom = 649.0
texture = ExtResource("2_byyrk")
flip_h = true
flip_v = true

[node name="Title" type="Control" parent="."]
anchors_preset = 0
offset_left = 16.0
offset_top = -36.0
offset_right = 56.0
offset_bottom = 4.0
metadata/_edit_group_ = true

[node name="Label" type="Label" parent="Title" node_paths=PackedStringArray("shortcut_context")]
layout_mode = 0
offset_left = 63.0
offset_top = -57.0
offset_right = 1138.0
offset_bottom = 383.0
shortcut_context = NodePath("")
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0.0980392, 0, 0.266667, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = -2
theme_override_constants/shadow_offset_y = 9
theme_override_constants/outline_size = 1
theme_override_constants/shadow_outline_size = 22
theme_override_fonts/font = ExtResource("2_bec30")
theme_override_font_sizes/font_size = 200
text = "Lost"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="Label2" type="Label" parent="Title" node_paths=PackedStringArray("shortcut_context")]
layout_mode = 0
offset_left = 23.0
offset_top = 67.0
offset_right = 1098.0
offset_bottom = 507.0
shortcut_context = NodePath("")
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0.0980392, 0, 0.266667, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = -2
theme_override_constants/shadow_offset_y = 9
theme_override_constants/outline_size = 1
theme_override_constants/shadow_outline_size = 22
theme_override_fonts/font = ExtResource("2_bec30")
theme_override_font_sizes/font_size = 200
text = "Arcana"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="Control" type="Control" parent="."]
anchors_preset = 0
offset_left = 23.0
offset_top = 40.0
offset_right = 63.0
offset_bottom = 80.0
theme = ExtResource("3_duxap")
metadata/_edit_group_ = true

[node name="btn_new_game" type="Button" parent="Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 388.0
offset_top = 300.0
offset_right = 724.0
offset_bottom = 349.0
grow_horizontal = 2
grow_vertical = 2
text = "New Game"

[node name="btn_continue" type="Button" parent="Control"]
layout_mode = 0
offset_left = 408.0
offset_top = 384.0
offset_right = 744.0
offset_bottom = 433.0
text = "Continue"

[node name="btn_settings" type="Button" parent="Control"]
layout_mode = 0
offset_left = 408.0
offset_top = 448.0
offset_right = 744.0
offset_bottom = 497.0
text = "Settings
"

[node name="btn_quit" type="Button" parent="Control"]
layout_mode = 0
offset_left = 408.0
offset_top = 512.0
offset_right = 744.0
offset_bottom = 561.0
text = "Quit Game"

[connection signal="pressed" from="Control/btn_new_game" to="." method="_on_btn_new_game_pressed"]
[connection signal="pressed" from="Control/btn_continue" to="." method="_on_btn_continue_pressed"]
[connection signal="pressed" from="Control/btn_settings" to="." method="_on_btn_settings_pressed"]
[connection signal="pressed" from="Control/btn_quit" to="." method="_on_btn_quit_pressed"]
